SCRUM-396 Plaintext renderer. Still rendering bar itself for now.
git-svn-id: file:///home/dlipp/subversion-migration/svn-repo-copy/community/bundle/trunk@49431 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f