@@ -136,7 +136,7 @@
                TODO : <jvmargs> used by some profiles is not passed anymore - caused issues with Tomcat
                Setting debug options causes problems at shutdown -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n
               -->
-              <cargo.jvmargs>-Dmagnolia.update.auto=true -Xmx512M</cargo.jvmargs>
+              <cargo.jvmargs>-Dmagnolia.update.auto=true -Xmx1024M  -Djava.awt.headless=true -XX:MaxPermSize=256m</cargo.jvmargs>
               <cargo.servlet.port>8088</cargo.servlet.port>
               <cargo.logging>medium</cargo.logging>
 
